syntax = "proto3";

option go_package  = "Users/admin/Code/myProject/src/common/orders";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
}   


message Order {
    int32 OrderId  = 1;
    int32 CustomerId = 2;
    int32 ProductId = 3;
    int32 Quantity = 4;
}

message CreateOrderRequest {
    int32 customerId = 1;
    int32 productId = 2;
    int32 qty = 3;
}

message CreateOrderResponse {
    string status = 1;
}

message GetOrdersRequest {
    int32 customerId = 1;
}

message GetOrdersResponse {
    repeated Order orders  = 1;
}
